# mirna_target_prediction

./: .Rhistory  .clang-format  .gitignore  .gitmodules  .projectile  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  Makefile  README.md  README.txt  a.out  alskdjakldj  build.sh  cluster.cpp  cluster.hpp  cluster.tpp  cluster_expression_profile.cpp  cluster_expression_profile.hpp  cluster_expression_profile.tpp  cmake_install.cmake  compile_commands.json  distance_based_predictions.cpp  expression_profile.cpp  expression_profile.hpp  expression_profile.tpp  expression_profiles  gene.cpp  gene.hpp  gene.tpp  gene_expression_profile.cpp  gene_expression_profile.hpp  gene_expression_profile.tpp  generate_xcode.sh  global_parameters.cpp  global_parameters.hpp  global_parameters.json  human_mirnas.json  interaction_graph.cpp  interaction_graph.hpp  (+33 more)
data/: *R:mirna_target_prediction*  .#*R:mirna_target_prediction*  .#analyze_interactions.r  .#build_interaction_graph.py  .#gene_info_processes.txt  .gitignore  Gene_info.txt  analyze_adjacency_matrices.r  analyze_context_scores.r  analyze_expression_profiles.r  analyze_interactions.r  analyze_matchings_prediction.r  build_interaction_graph.py  build_mirna_isoforms_dictionary.py  cluster_debugging.r  ensembl_id_to_mirna_id_converter.r  gene.py  gene_info_processes.txt  gene_names_analyzer.r  human_mirnas.json  matching_to_tsv.py  matchings_to_json.py  miR_Family_Info.txt  mirna.py  mirna_isoforms_distinguisher.py  mirnas_to_json.py  my_device.r  my_plot_name.sh  site_type_analyzer.rr  test  tsv_to_json.py  utrs_to_json.py
data/expression_profiles/: create_artificial_patients_from_expression_profiles.r
data/expression_profiles/gdc/: .gitignore  mirna_isoforms_distinguisher.py  processe_gene_expression_profiles.sh
data/expression_profiles/hela/gene/geo/: Readme  run.sh
data/expression_profiles/hela/mirna/encode/: process_raw_mirnas.r
data/transfection/: .#compare_predictions.r  .gitignore  compare_predictions.r  make_predictions.r  parse_targetscan_data.r
data/transfection/cell_lines/ENCSR000CRO/: REPORT_SPACEMACS_ISSUE  process_raw_mirnas.r
dependencies/sohail/: serialize_tuple.hpp
expression_profiles.dSYM/Contents/: Info.plist
xcode/: generate.sh
